# solar-plate-backend

./: Makefile  README.md  docker-compose.yml
code/: Makefile  pyproject.toml
code/core/app/service/: auth_service.py  company_service.py  power_data_service.py  solar_plate_service.py  user_service.py
code/core/domain/entity/: company.py  power_data.py  solar_plate.py  user.py
code/core/domain/repository/: company_repository.py  power_data_repository.py  solar_plate_repository.py  user_repository.py
code/core/infra/builder/: company_builder.py  power_data_builder.py  solar_plate_builder.py  user_builder.py
code/core/infra/controller/: __init__.py  auth_controller.py  company_controller.py  power_data_controller.py  solar_plate_controller.py  user_controller.py
code/core/infra/factory/: __init__.py  auth_service_factory.py  company_service_factory.py  power_service_data_factory.py  solar_plate_factory.py  user_service_factory.py
code/core/infra/models/: __init__.py  company.py  power_data.py  solar_plate.py  user.py
code/core/infra/repository/: __init__.py  db_company_repository.py  db_power_data_repository.py  db_solar_plate_repository.py  db_user_repository.py
code/core/infra/schema/: company.py  power_data.py  solar_plate.py  user.py
code/migrations/: env.py
code/migrations/versions/: 12ebb5618f29_.py  17c645f9d005_.py  2528b8fe7998_.py  7771c94c4005_.py  7a9ae6c9ea45_.py  a11eb0b2f785_.py  acb2c7b25f1b_.py
code/setup/: config.py  main.py
code/setup/db/: __init__.py  connection.py
code/setup/utils/: exception_handler.py
(+11 files in other folders)
